--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,15 +1,18 @@
 /* CSS code of Home Page */
 *{
     margin: 0%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     padding: 0;
+    box-sizing: border-box;
 }
+
 .headingtext{
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: larger;
     margin-top: 10px;
 }
+
 .card{
     background-color: white;
     padding: 10px;
@@ -22,8 +25,8 @@
     display: flex;
     background-color: white;
     height: 75px;
-    
 }
+
 .leftbar{
     padding: 5px;
     flex: 10%;
@@ -31,27 +34,29 @@
     margin-top: 10px;
     background-color: transparent;
     align-items: center;
-    
 }
+
 .centerbar{
     padding: 5px;
     flex: 50%;
     margin-top: 5px;
     margin-bottom: 5px;
-
 }
+
 .rightbar{
     align-items: center;
     flex: 5%;
     margin-bottom: 10px;
 }
+
 .navtext{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: x-large;
     color: white;
     text-align: center;
     margin-left: 20px;
 }
+
 .navtable{
     width: 50%;
     align-items: right;
@@ -59,10 +64,12 @@
     background-color: transparent;
     height: 50px;
 }
+
 .navimage{
     margin-top: 10px;
     margin-left: 10px;
 }
+
 /* css for search bar */
 .search{
     border: 2px solid black;
@@ -78,19 +85,21 @@
     outline: 0px;
     font-size: larger;
 }
-/* css for the protion of whats new */
+
+/* css for the portion of whats new */
 .newlaunchrow{
     display: flex;
     background-color: white;
     margin: 10px;
     margin-right: 30px;
-
 }
+
 .newlaunchleft{
     flex: 40%;
     padding: 10px;
     background-color: aliceblue;
 }
+
 .newlaunchcenter{
     flex:30%;
     margin-left: 10px;
@@ -157,7 +166,7 @@
     background-color: white;
     text-align: center;
     font-size: larger;
-    font-family:Arial, Helvetica, sans-serif ;
+    font-family: 'Poppins', sans-serif;
 }
 /* container for image slider */
 .container2{
@@ -455,7 +464,7 @@ main{
 }
 
 .div { /*css for dv*/
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color:#000000;
 }
